--- a/10-12/index10-12.html
+++ b/10-12/index10-12.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/contentleft.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -37,6 +38,38 @@
                 <b style="font-size: 64px;">FASHION BLOG</b>
                 <br>
                 <button class="intro-button">SUBCRIBE</button>
+            </div>
+        </div>
+        <div class="content">
+            <div class="content-left">
+                <div class="title-heading">
+                    <h3 style="font-size: 24px; text-align: center;">TITLE HEADING</h3>
+                    <H5 style="font-size: 18px; text-align: center;">Title description, <span style="opacity: 0.6;">May
+                            2, 2016</span></H5>
+                    <img style="width: 100%;" src="/img/girl_hat.jpg" alt="a">
+                    <p> <strong>More Hats!</strong> I am crazy about hats these days. Some text about this blog entry.
+                        Fashion fashion and
+                        mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem
+                        euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed
+                        ultricies mi non congue ullam corper. Praesent tincidunt sedtellus ut rutrum. Sed vitae justo
+                        condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+                    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco.</p>
+                    <div>
+                        <button class="button-like"><i class="fa fa-thumbs-up"></i>Like</button>
+                        <button class="button-replies">Replies <span
+                                style="color: black; background-color: white; padding: 0 8px;">1</span></button>
+                    </div>
+                    <hr style="margin: 20px 0;">
+                    <div class="flex">
+                        <img style="width: 90px; margin-right: 70px;" src="/img/avatar_smoke.jpg" alt="áda">
+                        <div>
+                            <h4 style="margin: 10px 0;">Geogre <span style="opacity: 0.6;">May 3, 2015, 5:32 PM</span></h4>
+                            <p style="margin: 15px 0;">Great blog post! Folowing</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
